--- a/views/projects/MallMapperUiDesign.jade
+++ b/views/projects/MallMapperUiDesign.jade
@@ -1,6 +1,11 @@
 include TagsList
 
-h1 Please select a project.
+div
+  p 
+    strong Description:
+    .line UI design for a mall-mapping application.
+  h1 
+    a(href='https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxkZWZjb2RlcHJvamVjdHN8Z3g6NWIxYzA4MGI2MWIxZGZh', target='_blank', rel='nofollow') MallMapper UI Design
 
 
   +TagList(selectedProject)
