--- a/views/projects/n-BandEQView.jade
+++ b/views/projects/n-BandEQView.jade
@@ -1,6 +1,15 @@
 include TagsList
 
-h1 Please select a project.
-
+h1 Rom Programmer
+div
+  br
+  div <strong> Description: </strong>
+  p This is a VST plugin that calculates the FFT and shows the frequency spectrum on a 10-band LED meter.
+    .line Source and jar file may be downloaded below. 
+  br
+  a(href='./public/projects/defVstFft-PLUGIN(win).zip') Download plugin
+  br
+  br
+  a(href='./public/projects/defVstFft-src.zip') Download source
 
   +TagList(selectedProject)
