--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1164,6 +1164,11 @@
 
 /* Image */
 
+  img{
+    max-width:100%; 
+    max-height:100%;
+  }
+  
 	.image {
 		-moz-transition: opacity 0.25s ease-in-out;
 		-webkit-transition: opacity 0.25s ease-in-out;
@@ -1180,6 +1185,8 @@
 		.image img {
 			display: block;
 			width: 100%;
+      max-width:100%; 
+      max-height:100%;
 		}
 
 		.image.fit {
