--- a/views/projects/SoftwareTestingReport.jade
+++ b/views/projects/SoftwareTestingReport.jade
@@ -1,5 +1,11 @@
 include TagsList
 
-h1 Please select a project.
+div
+  p 
+    strong Description:
+    .line Test report for unit, integration, and system tests performed on the open-source AstroGrep software.
+    
+  h1 
+    a(href='https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxkZWZjb2RlcHJvamVjdHN8Z3g6MjEyNzFjYWVlZWMxOTY0NA', target='_blank', rel='nofollow') Software Testing Report
 
   +TagList(selectedProject)
